Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1186,10 +1186,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ages', 'list_price', 'num_reviews', 'piece_count', 'play_star_rating',\n",
+       "       'prod_desc', 'prod_id', 'prod_long_desc', 'review_difficulty',\n",
+       "       'set_name', 'star_rating', 'theme_name', 'val_star_rating', 'country'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns\n"
+   ]
   },
   {
    "cell_type": "code",
