--- a/index.ipynb
+++ b/index.ipynb
@@ -1186,26 +1186,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['ages', 'list_price', 'num_reviews', 'piece_count', 'play_star_rating',\n",
-       "       'prod_desc', 'prod_id', 'prod_long_desc', 'review_difficulty',\n",
-       "       'set_name', 'star_rating', 'theme_name', 'val_star_rating', 'country'],\n",
-       "      dtype='object')"
+       "2994    Marvel Super Heroes\n",
+       "Name: theme_name, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.columns\n",
-    "df.theme_name.samp"
+    "df.theme_name.sample()\n"
    ]
   },
   {
