Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1203,7 +1203,8 @@
    ],
    "source": [
     "df.columns\n",
-    "df.theme_name.sample()\n"
+    "df.theme_name.sample()\n",
+    "df.theme_name."
    ]
   },
   {
