Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1186,17 +1186,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2994    Marvel Super Heroes\n",
-       "Name: theme_name, dtype: object"
+       "40"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,7 +1203,7 @@
    "source": [
     "df.columns\n",
     "df.theme_name.sample()\n",
-    "df.theme_name."
+    "df.theme_name.unique()"
    ]
   },
   {
