Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1186,16 +1186,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "40"
+       "array(['Angry Birds™', 'Architecture', 'BOOST', 'BrickHeadz', 'City',\n",
+       "       'Juniors', 'Classic', 'Creator 3-in-1', 'Creator Expert',\n",
+       "       'THE LEGO® BATMAN MOVIE', 'DC Comics™ Super Heroes', 'DIMENSIONS™',\n",
+       "       'DC Super Hero Girls', 'Disney™', 'DUPLO®', 'Elves', 'Friends',\n",
+       "       'Ghostbusters™', 'Ideas', 'Indoraptor Rampage at Lockwood Estate',\n",
+       "       'Carnotaurus Gyrosphere Escape', 'T. rex Transport',\n",
+       "       'Jurassic Park Velociraptor Chase', 'Dilophosaurus Outpost Attack',\n",
+       "       \"Blue's Helicopter Pursuit\", 'Stygimoloch Breakout',\n",
+       "       'Pteranodon Chase', 'Marvel Super Heroes', 'MINDSTORMS®',\n",
+       "       'Minecraft™', 'Minifigures', 'NEXO KNIGHTS™',\n",
+       "       'THE LEGO® NINJAGO® MOVIE™', 'NINJAGO®', 'SERIOUS PLAY®',\n",
+       "       'Speed Champions', 'Star Wars™', 'Technic', 'Power Functions',\n",
+       "       'LEGO® Creator 3-in-1', nan], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1215,7 @@
    "source": [
     "df.columns\n",
     "df.theme_name.sample()\n",
-    "df.theme_name.unique()"
+    "df.theme_name.unique()\n"
    ]
   },
   {
