--- a/index.ipynb
+++ b/index.ipynb
@@ -1215,7 +1215,8 @@
    "source": [
     "df.columns\n",
     "df.theme_name.sample()\n",
-    "df.theme_name.unique()\n"
+    "df.theme_name.unique()\n",
+    "df.theme_name.sort_va"
    ]
   },
   {
