Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1186,28 +1186,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Angry Birds™', 'Architecture', 'BOOST', 'BrickHeadz', 'City',\n",
-       "       'Juniors', 'Classic', 'Creator 3-in-1', 'Creator Expert',\n",
-       "       'THE LEGO® BATMAN MOVIE', 'DC Comics™ Super Heroes', 'DIMENSIONS™',\n",
-       "       'DC Super Hero Girls', 'Disney™', 'DUPLO®', 'Elves', 'Friends',\n",
-       "       'Ghostbusters™', 'Ideas', 'Indoraptor Rampage at Lockwood Estate',\n",
-       "       'Carnotaurus Gyrosphere Escape', 'T. rex Transport',\n",
-       "       'Jurassic Park Velociraptor Chase', 'Dilophosaurus Outpost Attack',\n",
-       "       \"Blue's Helicopter Pursuit\", 'Stygimoloch Breakout',\n",
-       "       'Pteranodon Chase', 'Marvel Super Heroes', 'MINDSTORMS®',\n",
-       "       'Minecraft™', 'Minifigures', 'NEXO KNIGHTS™',\n",
-       "       'THE LEGO® NINJAGO® MOVIE™', 'NINJAGO®', 'SERIOUS PLAY®',\n",
-       "       'Speed Champions', 'Star Wars™', 'Technic', 'Power Functions',\n",
-       "       'LEGO® Creator 3-in-1', nan], dtype=object)"
+       "0        Angry Birds™\n",
+       "1        Angry Birds™\n",
+       "2        Angry Birds™\n",
+       "2528     Angry Birds™\n",
+       "2529     Angry Birds™\n",
+       "2530     Angry Birds™\n",
+       "1967     Architecture\n",
+       "1968     Architecture\n",
+       "1969     Architecture\n",
+       "1970     Architecture\n",
+       "1971     Architecture\n",
+       "4469     Architecture\n",
+       "8954     Architecture\n",
+       "8951     Architecture\n",
+       "8952     Architecture\n",
+       "1966     Architecture\n",
+       "8950     Architecture\n",
+       "8949     Architecture\n",
+       "8948     Architecture\n",
+       "8947     Architecture\n",
+       "8946     Architecture\n",
+       "8953     Architecture\n",
+       "1965     Architecture\n",
+       "1963     Architecture\n",
+       "8945     Architecture\n",
+       "5017     Architecture\n",
+       "5016     Architecture\n",
+       "5015     Architecture\n",
+       "5014     Architecture\n",
+       "5013     Architecture\n",
+       "             ...     \n",
+       "4398          Technic\n",
+       "4397          Technic\n",
+       "8902          Technic\n",
+       "8903          Technic\n",
+       "8904          Technic\n",
+       "8905          Technic\n",
+       "4408          Technic\n",
+       "8892          Technic\n",
+       "4409          Technic\n",
+       "4412          Technic\n",
+       "8894          Technic\n",
+       "8895          Technic\n",
+       "8897          Technic\n",
+       "8898          Technic\n",
+       "8899          Technic\n",
+       "8900          Technic\n",
+       "8901          Technic\n",
+       "4420          Technic\n",
+       "4419          Technic\n",
+       "4418          Technic\n",
+       "4417          Technic\n",
+       "4416          Technic\n",
+       "4415          Technic\n",
+       "4414          Technic\n",
+       "4413          Technic\n",
+       "4410          Technic\n",
+       "11656         Technic\n",
+       "3777              NaN\n",
+       "8087              NaN\n",
+       "8205              NaN\n",
+       "Name: theme_name, Length: 12261, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1265,7 @@
     "df.columns\n",
     "df.theme_name.sample()\n",
     "df.theme_name.unique()\n",
-    "df.theme_name.sort_va"
+    "df.theme_name.sort_values()"
    ]
   },
   {
