Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1410,7 +1410,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Text(0, 0.5, 'Theme')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "to_graph = df.theme_name.value_counts()[:5]\n",
     "to_graph.plot(kind='barh') #lots of other optional parameters can be passed such as color\n",
