Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1438,7 +1438,7 @@
     "to_graph = df.theme_name.value_counts()[:5]\n",
     "to_graph.plot(kind='barh') #lots of other optional parameters can be passed such as color\n",
     "plt.title('Top 5 Lego Themes', fontsize=14) #fontsize is optional\n",
-    "plt.xlabel('Number of Lego Sets') #you could also pass in fontsize if you wanted here\n",
+    "plt.xlabel('Number of Lego Sets', fontsize=10) #you could also pass in fontsize if you wanted here\n",
     "plt.ylabel('Theme') #you could also rotate text if you wanted"
    ]
   },
