Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1440,7 +1440,7 @@
     "plt.title('Top 5 Lego Themes', fontsize=14) #fontsize is optional\n",
     "plt.xlabel('Number of Lego Sets', fontsize=10) #you could also pass in fontsize if you wanted here\n",
     "plt.ylabel('Theme')\n",
-    "#you could also rotate text if you wanted"
+    "plt.xticks(#you could also rotate text if you wanted"
    ]
   },
   {
