Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1372,7 +1372,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "xticks()"
+   ]
   },
   {
    "cell_type": "code",
