Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1562,7 +1562,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.collections.PathCollection at 0x7fc44f08cac8>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "plt.scatter(df.play_star_rating, df.star_rating)"
    ]
