Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1628,7 +1628,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " plt.scatter(df.play_star_rating, df.star_rating)"
+    " plt.hist(df.play_star_rating, df.star_rating)"
    ]
   },
   {
