Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1657,7 +1657,7 @@
     }
    ],
    "source": [
-    " plt.hist(df.play_star_rating, df.theme_name)"
+    " plt.h(df.play_star_rating, df.theme_name)"
    ]
   },
   {
