Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1661,7 +1661,7 @@
     }
    ],
    "source": [
-    " plt.scatter(df.play_star_rating, df.theme_name)"
+    " plt.scatter(df.play_star_rating, df.star_ratingtheme_name)"
    ]
   },
   {
